--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </div>
             </div>
         </div>
+
         <div class="card_container"></div>
 
         <div class="Player_Area">
@@ -67,7 +68,7 @@
     <div class="Result_modal hideRes">
         <div class="Result_modalContent winz_modal">
             <div class="centerRes">&#129321;&#127919;<span class="result_display"></span>Wins..&#128081;</div>
-            <div class="header_box Restartbtn">&#x27F3; Restart</div>
+            <div class="header_box BoxRestartbtn">&#x27F3; Restart</div>
         </div>
     </div>
     <script src="./JS/backCard.js"></script>
